fix(Sider): Fix collapsed props issue.

--- a/packages/react-layout/src/style/index.less
+++ b/packages/react-layout/src/style/index.less
@@ -14,6 +14,11 @@
   background: #f0f2f5;
   margin: 0;
   padding: 0;
+
+  &&-has-sider > &,
+  &&-has-sider > &-content {
+    width: 0;
+  }
   &-header,
   &-footer {
     -webkit-box-flex: 0;
